# taipei-day-trip

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  app.py  compose.yaml  config.py  docker-compose.prod.yaml  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  taipei_attractions.sql  未命名绘图.drawio
.github/workflows/: docker-image-ci.yml
app/: __init__.py
app/api/controllers/: attractions.py  booking.py  mrts.py  orders.py  user.py
app/api/models/: JWTAuthenticator.py  attractions.py  booking.py  orders.py  user.py
app/api/routers/: attractions.py  booking.py  mrts.py  orders.py  static_pages.py  user.py
app/api/schemas/: schemas.py
app/api/views/: attractions.py  (+4 more)
app/core/: config.py  database.py
app/sources/: data.py  taipei-attractions.json
app/static/: attraction.html  booking.html  index.html  thankyou.html
controller/: user.py
controllers/: attractions.py  booking.py  mrts.py  orders.py  user.py
data/: data.py
model/: JWTAuthenticator.py  attractions.py  auth.py  booking.py  orders.py  schemas.py  user.py
models/: JWTAuthenticator.py  attractions.py  mrts.py  orders.py  schemas.py  user.py
modules/: pool.py
nginx/: nginx.conf
nginx/conf.d/: default.conf
router/: booking.py  mrt_station.py  user.py
routers/: attractions.py  booking.py  mrts.py  orders.py  static_pages.py  user.py
static/: all.scss  attraction.html  booking.html  index.html  thankyou.html
view/: attractions.py  booking.py  mrts.py  orders.py  user.py
views/: attractions.py  booking.py  orders.py  user.py
(+138 files in other folders)
